@@ -17,14 +17,18 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-@DisplayName("Update Filter accuracy test")
-public class UpdateProductListTest {
+@DisplayName("Update Filter accuracy test - Content Equals")
+public class UpdateProductList_ContentEquals_Test {
   List<Product> localProductList = Arrays.asList(
       new Product(1, "7891008121025","CAIXA DE BOMBOM GAROTO 400G", new BigDecimal("6.99")),
       new Product(2, "7891000140307","LEITE EM PO INTEGRAL NINHO 400G", new BigDecimal("13.99")),
       new Product(3, "7891000064276","MUCILON ARROZ NESTLE 400G", new BigDecimal("7.99")),
       new Product(4, "7898461320323","ARROZ DOURA TIPO 1 COM 5 KG", new BigDecimal("11.5")));
-  List<Product> updateProductList = List.of();
+  List<Product> updateProductList = Arrays.asList(
+      new Product(1, "7891008121025","CAIXA DE BOMBOM GAROTO 400G", new BigDecimal("6.99")),
+      new Product(3, "7891000064276","MUCILON ARROZ NESTLE 400G", new BigDecimal("7.99")),
+      new Product(2, "7891000140307","LEITE EM PO INTEGRAL NINHO 400G", new BigDecimal("13.99")),
+      new Product(4, "7898461320323","ARROZ DOURA TIPO 1 COM 5 KG", new BigDecimal("11.5")));
 
   LocalData localData;
   UpdateData updateData;
@@ -40,17 +44,15 @@ public class UpdateProductListTest {
   }
 
   @Test
-  @DisplayName("Error: Empty update table - Nothing to update.")
-  void emptyUpdateTable() {
+  @DisplayName("Error: Content Equals - Nothing to update.")
+  void contentEqualsTest() {
 
     try {
       updateList.getList();
-      fail("Empty table check success...");
+      fail("Content Equals check success...");
     } catch (CoreError e) {
-      assertEquals(e.getMessage(), "Error: Empty update table - Nothing to update.");
+      assertEquals(e.getMessage(), "Error: Content Equals - Nothing to update.");
       System.out.println(e.getMessage());
     }
   }
-
-
 }
